# fruit-classifier

./: .gitignore  model.py  pyproject.toml  settings.py  train.py
data/: README.md  __init__.py  dataset.py  download.sh
