[tool.poetry]
name = "fruit-classifier"
version = "0.1.0"
description = "A simple fruit classifier trained with the Fruits360 dataset from Kaggle."
authors = ["seph <sephpace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"
Pillow = "^8.1.0"
matplotlib = "^3.3.4"
kaggle = "^1.5.10"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
